# number-munchers

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.gradle  run-number-munchers.bat  settings.gradle
codex-desktop-agent/: README.md  desktop_agent.py  main.py  mcp_server.py  pyproject.toml
src/main/java/com/pairsys/numbermunchers/: BoardCell.java  BoardCellView.java  EnemyActor.java  EnemyAi.java  GameConfig.java  GameDebugServer.java  GameSession.java  GameState.java  GridActor.java  GridPoint.java  LevelPlan.java  LevelPlanner.java  NumberMunchersApp.java  PlayerActor.java  PlayerProgress.java  PlayerProgressStore.java  Rule.java  SoundEngine.java  SpriteFactory.java
