[project]
name = "codex-desktop-agent"
version = "0.1.0"
description = "FastAPI agent for Windows desktop screenshots and input automation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mss>=10.1.0",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "uvicorn>=0.41.0",
]

[project.scripts]
desktop-agent = "main:main"
desktop-agent-mcp = "mcp_server:main"
